--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,6 @@
-rename=!!GROUP=milkcat!!^@[XXX]
+rename=!!GROUP=milkcat!!^@[milkcat]
+rename=!!GROUP=eejsq!!^@[eejsq]
+rename=!!GROUP=一元机场!!^@[一元机场]
+rename=!!GROUP=两元店!!^@[两元店]
+rename=!!GROUP=eton!!^@[eton]
+rename=!!GROUP=efcloud!!^@[efcloud]
