--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -174,16 +174,15 @@ skip_failed_links=true
 
 exclude_remarks=(IPV6|重置|流量|用户|本站|漏洞|永久虚通路|车|邀|免翻|邀请|eevpn|域名|机场|刷新|禁止|超时|过期|备用登录|计划|面板|忘记|到期|套餐|官网|更多|关注|25倍率|http|增加|持续|渠道|购买|QQ|Ins|二手)
 
-rename=!!GROUP=milkcat!!^@MilkCat-
-rename=!!GROUP=eejsq!!^@Eejsq-
-rename=!!GROUP=一元机场!!^@一元机场-
-rename=!!GROUP=两元店!!^@两元店-
-rename=!!GROUP=eton!!^@Eton-
-rename=!!GROUP=efcloud!!^@EfCloud-
-rename=!!GROUP=Eevpn!!^@Eevpn-
-rename=!!GROUP=fscloud!!^@Fscloud-
-rename=!!GROUP=cinx!!^@cinx-
-rename=!!GROUP=云安云!!^@yay-
-rename=!!GROUP=cfpage!^@cfpage-
+rename=!!GROUP=milkcat!!^@「MilkCat」
+rename=!!GROUP=eejsq!!^@「Eejsq」
+rename=!!GROUP=一元机场!!^@「一元机场」
+rename=!!GROUP=两元店!!^@「两元店」
+rename=!!GROUP=eton!!^@「Eton」
+rename=!!GROUP=efcloud!!^@「EfCloud」
+rename=!!GROUP=Eevpn!!^@「Eevpn」
+rename=!!GROUP=fscloud!!^@「Fscloud」
+rename=!!GROUP=cinx!!^@「cinx」
+rename=!!GROUP=云安云!!^@「云安云」
 
 ;luck
