--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -3884,6 +3884,7 @@ payload:
   - '+.puuko.com'
   - '+.pwned.com'
   - '+.pximg.net'
+  - '+.python.org'
   - '+.python.com'
   - '+.python.com.tw'
   - '+.pythonhackers.com'
