--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -9,6 +9,7 @@ payload:
   - '+.socloud.me'
   - '+.duyaoss.com'
   - '+.brave.com'
+  - '+.brew.sh'
   - '+.pincong.org'
   - '+.discord.com'
   - '+.china-cdn-net.com'
