--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -2925,6 +2925,7 @@ payload:
   - '+.lookpic.com'
   - '+.looktoronto.com'
   - '+.lotsawahouse.org'
+  - '+.lottiefiles.com'
   - '+.lotuslight.org.hk'
   - '+.lotuslight.org.tw'
   - '+.loved.hk'
