--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -3732,6 +3732,7 @@ payload:
   - '+.pinterest.jp'
   - '+.pinterest.nl'
   - '+.pinterest.se'
+  - '+.pionex.com'
   - '+.pipii.tv'
   - '+.piposay.com'
   - '+.piraattilahti.org'
