--- a/providers/openai_domain.yaml
+++ b/providers/openai_domain.yaml
@@ -8,6 +8,7 @@ payload:
   - '+.phind.com'
   - '+.albus.org'
   - '+.segment.io'
+  - '+.chatgpt.com'
   - '+.segment.com'
   - '+.dify.ai'
   - '+.launchdarkly.com'
