--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -63,6 +63,7 @@ payload:
   - '+.pub.dev'
   - '+.jina.ai'
   - '+.missuo.me'
+  - '+.firefly-iii.org'
   - '+.hackbear.tv'
   - '+.weesunday.com'
   - '+.keeflys.com'
