--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -190,6 +190,7 @@ payload:
   - '+.twitchcdn.net'
   - 'api.viu.now.com'
   - 'd1k2us671qcoau.cloudfront.net'
+  - 'fire.chinnsenn.com'
   - 'd2anahhhmp1ffz.cloudfront.net'
   - 'dfp6rglgjqszk.cloudfront.net'
   - '+.bootstrapcdn.com'
