--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -46,7 +46,7 @@ payload:
   - '+.hanime1.me'
   - '+.merlinblog.xyz'
   - '+.airbuddy.app'
-  - '+.PythonHosted.org'
+  - '+.pythonhosted.org'
   - '+.pypi.org'
   - '+.slack.com'
   - '+.slack-edge.com'
