--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -80,6 +80,7 @@ payload:
   - '+.inoreader.com'
   - '+.ip138.com'
   - '+.linkedin.com'
+  - '+.linktr.ee'
   - '+.myteamspeak.com'
   - '+.notion.so'
   - '+.notion.site'
