--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -21,6 +21,7 @@ payload:
   - '+.atlassian.com'
   - '+.alive.bar'
   - '+.haileshe.club'
+  - '+.hengstyle.com'
   - '+.jetbrains.com'
   - '+.kartinfo.me'
   - '+.nexitally.com'
