更新 Apple 和 Gihub 节点

--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -42,7 +42,7 @@ ruleset=📈 IBKR,clash-classic:https://raw.githubusercontent.com/chinnsenn/Clas
 ruleset=👛 Wallet,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wallet_domain.yaml
 ruleset=🤖 Anthropic,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/anthropic_domain.yaml
 ruleset=🤖 DeepL,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/deepl_domain.yaml
-ruleset=🐙 Github,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/github_domain.yaml
+ruleset=🐙 Github,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/GitHub/GitHub_No_Resolve.yaml
 ruleset=🎼 Spotify,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/spotify_domain.yaml
 ruleset=🎼 Spotify,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/spotify_classical.yaml
 ruleset=🍑 DMMCOJP,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/dmmjp_domain.yaml
@@ -88,8 +88,19 @@ ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/chinnse
 ruleset=Ⓜ️ 微软云盘,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/OneDrive_domain.yaml
 ruleset=Ⓜ️ 微软云盘,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/OneDrive_classical.yaml
 ruleset=Ⓜ️ 微软服务,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Microsoft_domain.yaml
-ruleset=🍎 苹果服务,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Apple_domain.yaml
-ruleset=🍎 苹果服务,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Apple_ipcidr.yaml,no-resolve
+ruleset=🍎 苹果服务,clash-domain:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Apple/Apple_Domain.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Apple/Apple_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleDaily/AppleDaily_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleDev/AppleDev_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleFirmware/AppleFirmware_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleHardware/AppleHardware_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleID/AppleID_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleMail/AppleMail_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleMedia/AppleMedia_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleMusic/AppleMusic_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleNews/AppleNews_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleProxy/AppleProxy_No_Resolve.yaml
+ruleset=🍎 苹果服务,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/AppleTV/AppleTV_No_Resolve.yaml
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
