修改 tiktok 分流链接

--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -17,8 +17,7 @@ ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnse
 ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Steam_domain.yaml
 ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_domain.yaml
 ruleset=🎮 游戏平台,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_ipcidr.yaml,no-resolve
-ruleset=🎵 TikTok,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/TikTok_domain.yaml
-ruleset=🎵 TikTok,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/TikTok_classical.yaml
+ruleset=🎵 TikTok,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/TikTok/TikTok_No_Resolve.yaml
 ruleset=📹 YouTube,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/youtube_domain.yaml
 ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube_No_Resolve.yaml
 ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTubeMusic/YouTubeMusic_No_Resolve.yaml
