--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -42,6 +42,7 @@ ruleset=👛 Wallet,clash-domain:https://raw.githubusercontent.com/chinnsenn/Cla
 ruleset=🤖 Anthropic,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/anthropic_domain.yaml
 ruleset=🤖 DeepL,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/deepl_domain.yaml
 ruleset=🐙 Github,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/GitHub/GitHub_No_Resolve.yaml
+ruleset=🐦 Twitter,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
 ruleset=🎼 Spotify,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/spotify_domain.yaml
 ruleset=🎼 Spotify,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/spotify_classical.yaml
 ruleset=🍑 DMMCOJP,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/dmmjp_domain.yaml
@@ -125,6 +126,7 @@ custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点-自动`[]🇨🇳 
 custom_proxy_group=🎥 Netflix`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇳🇬 尼日利亚节点
 custom_proxy_group=🎥 Disney+`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点
 custom_proxy_group=🐙 Github`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
+custom_proxy_group=🐦 Twitter`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
 custom_proxy_group=🇺🇲 美国节点`select`(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z]))
