--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -1741,6 +1741,7 @@ payload:
   - '+.flipboard.com'
   - '+.flipkart.com'
   - '+.flitto.com'
+  - '+.flowith.io'
   - '+.flnet.org'
   - '+.flog.tw'
   - '+.flurry.com'
