--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -35,6 +35,7 @@ payload:
   - '+.cloudflare.com'
   - '+.xn--gmq396grzd.com'
   - '+.hk1lib.org'
+  - '+.zenpop.jp'
   - '+.zlibcdn2.com'
   - '+.booksc.xyz'
   - '+.zlibrary.org'
