--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -24,6 +24,7 @@ payload:
   - '+.hengstyle.com'
   - '+.jetbrains.com'
   - '+.kartinfo.me'
+  - '+.sagernet.org'
   - '+.nexitally.com'
   - '+.sonatype.org'
   - '+.milkcat.net'
