--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -206,5 +206,6 @@ rename=!!GROUP=Eevpn!!^@「Eevpn」
 rename=!!GROUP=fscloud!!^@「Fscloud」
 rename=!!GROUP=cinx!!^@「cinx」
 rename=!!GROUP=云安云!!^@「云安云」
+rename=!!GROUP=linuxdo!!^@「linuxdo」
 
 ;luck
