--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -990,6 +990,7 @@ payload:
   - '+.chineseupress.com'
   - '+.chingcheong.com'
   - '+.chinman.net'
+  - '+.openai.chinnsenn.com'
   - '+.chithu.org'
   - '+.chobit.cc'
   - '+.chosun.com'
