--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -134,6 +134,7 @@ payload:
   - '+.japronx.vip'
   - '+.kfs.io'
   - '+.kkbox.com'
+  - '+.binance.com'
   - '+.kkbox.com.tw'
   - 'kktv-theater.kk.stream'
   - '+.kktv.com.tw'
