--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -40,6 +40,7 @@ ruleset=🤖 OpenAI,clash-domain:https://raw.githubusercontent.com/chinnsenn/Cla
 ruleset=🤖 OpenAI,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/openai_classical.yaml
 ruleset=📈 IBKR,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/ibkr.yaml
 ruleset=👛 Wallet,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wallet_domain.yaml
+ruleset=₿ Binance,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Binance/Binance_No_Resolve.yaml
 ruleset=🤖 Anthropic,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/anthropic_domain.yaml
 ruleset=🤖 DeepL,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/deepl_domain.yaml
 ruleset=🐙 Github,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/GitHub/GitHub_No_Resolve.yaml
@@ -123,6 +124,7 @@ custom_proxy_group=🎼 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🤖 OpenAI`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点
 custom_proxy_group=🤖 Anthropic`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
 custom_proxy_group=📈 IBKR`select`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动
+custom_proxy_group=₿ Binance`select`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`.*
 custom_proxy_group=👛 Wallet`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
 custom_proxy_group=🤖 DeepL`select`[]🇺🇲 美国节点-自动`[]DIRECT`.*
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
