--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -85,6 +85,7 @@ payload:
   - '+.linkedin.com'
   - '+.linktr.ee'
   - '+.myteamspeak.com'
+  - '+.metacubex.one'
   - '+.notion.so'
   - '+.notion.site'
   - '+.notion-static.co'
