--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -5,6 +5,7 @@ payload:
   - '+.abema.tv'
   - '+.ameba.jp'
   - '+.hayabusa.io'
+  - '+.armconverter.com'
   - '+.c4assets.com'
   - '+.channel4.com'
   - 'gspe1-ssl.ls.apple.com'
